--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -51,6 +51,7 @@ time_format = "3:04 PM"
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = ""
+email_form = 0
 phone = "(+86) 15927573538"
 address = ""
 
